# datatrampos-backend

./: .env.sample  .flake8  .gitignore  Makefile  Pipfile  Procfile  README.md  companies-list.txt  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: finder-checkpoint.ipynb
companies/: admin.py  models.py  serializer.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_glassdoor_alter_company_linkedin_and_more.py  0003_company_active_company_haveopenings.py  0004_remove_company_active_remove_company_haveopenings.py
config/: settings.py  urls.py
core/: jobs.json  models.py  serializers.py  settings.py  tasks.py  views.py  wsgi.py
core/migrations/: 0001_initial.py  0002_auto_20210511_0743.py
core/scraping/: gupy.py
datajobs/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
datajobs/front/datajobs/: package-lock.json  package.json
datajobs/scrapping/: jobs.json
frontend/: package-lock.json  package.json  urls.py
frontend/src/components/: App.js
frontend/static/frontend/: main.js
jobs/: admin.py  models.py  pagination.py  serializer.py  views.py
jobs/management/commands/: _private.py  companies.json  companiesv2.json  get_jobs.py  scrape.py  scrape_greenhouse.py  scrape_gupy.py  scrape_kenoby.py  scrape_lever.py
jobs/migrations/: 0001_initial.py  0002_job_url.py  0003_alter_job_url.py  0004_alter_job_company_name_alter_job_location_and_more.py  0005_remove_job_date_remove_job_seniority.py  0006_job_date.py  0007_job_seniority.py  0008_remove_job_company_name_job_company_alter_job_date_and_more.py  0009_remove_job_company_job_company_name.py  0010_alter_job_options_remove_job_company_name_and_more.py  0011_alter_job_options_remove_job_company_and_more.py  0012_remove_job_company_name_job_company.py  0013_alter_job_company.py  0014_remove_job_company.py  0015_job_company.py  0016_alter_job_company.py  0017_job_active.py  0018_remove_job_id_alter_job_url.py  0019_alter_job_location.py  0020_alter_job_location.py
jupyter/: companies.json  finder.ipynb
scrapping/: finder.ipynb  jobs.json
